--- a/test/fixtures/ensembles.yml
+++ b/test/fixtures/ensembles.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyString
+  name: FirstEnsemble
+  description: "The first ensemble"
 
 two:
-  name: MyString
-  description: MyString
+  name: SecondEnsemble
+  description: "The second ensemble"
