--- a/test/fixtures/member_instruments.yml
+++ b/test/fixtures/member_instruments.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  member_id: 1
+  member: one
   instrument: MyString
 
 two:
-  member_id: 1
+  member: two
   instrument: MyString
