--- a/test/fixtures/set_member_instruments.yml
+++ b/test/fixtures/set_member_instruments.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  member_set: one
+  member_set: member_set_one
   member_instrument: one
 
 two:
-  member_set: two
+  member_set: member_set_two
   member_instrument: two
